WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53470
REGRESSION (
r61383
): Navigation menu laid out incorrectly on aboardtheworld.com
https://bugs.webkit.org/show_bug.cgi?id=53470
Summary
REGRESSION (r61383): Navigation menu laid out incorrectly on aboardtheworld.com
Andy Estes
Reported
2011-01-31 19:45:25 PST
Created
attachment 80709
[details]
Test case This seems to be a regression due to <
http://trac.webkit.org/changeset/61383
>. See the above URL as well as the attached test case. While
r61383
makes us pass the "property is declared twice in rule" test, it seems to have a side effect not shared by other browsers that pass the test (e.g. Firefox 3.6.12 passes the IE9 test and also renders aboardtheworld.com correctly).
Attachments
Test case
(221 bytes, text/html)
2011-01-31 19:45 PST
,
Andy Estes
no flags
Details
Patch
(4.95 KB, patch)
2011-02-07 23:48 PST
,
Rob Buis
no flags
Details
Formatted Diff
Diff
Patch
(4.96 KB, patch)
2011-02-12 10:12 PST
,
Rob Buis
hyatt
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2011-01-31 19:45:48 PST
<
rdar://problem/8932246
>
Rob Buis
Comment 2
2011-02-07 23:48:40 PST
Created
attachment 81605
[details]
Patch
WebKit Review Bot
Comment 3
2011-02-07 23:50:38 PST
Attachment 81605
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'LayoutTests/ChangeLog', u'LayoutTests/fast..." exit_code: 1 Source/WebCore/css/CSSMutableStyleDeclaration.cpp:87: More than one command on the same line in if [whitespace/parens] [4] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Rob Buis
Comment 4
2011-02-12 10:12:19 PST
Created
attachment 82236
[details]
Patch
Dave Hyatt
Comment 5
2011-03-11 14:25:12 PST
Comment on
attachment 82236
[details]
Patch r=me
Rob Buis
Comment 6
2011-03-15 06:38:37 PDT
Landed in
r80963
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug