2011-03-13  Rob Buis  <rwlbuis@gmail.com>

Reviewed by Dave Hyatt.

        REGRESSION (r61383): Navigation menu laid out incorrectly on aboardtheworld.com
        https://bugs.webkit.org/show_bug.cgi?id=53470

        Prefer !important over normal properties when dealing with duplicate properties in style rules.

        Test: fast/css/duplicate-property-in-rule-important.html

        * css/CSSMutableStyleDeclaration.cpp:
        (WebCore::CSSMutableStyleDeclaration::CSSMutableStyleDeclaration):

Canonical link: https://commits.webkit.org/70848@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80963 268f45cc-cd09-0410-ab3c-d52691b4dbfc